creating user prfile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav align-items-center px-2 mx-2">
+                    <ul class="navitems navbar-nav align-items-center px-2 mx-2">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
@@ -58,7 +58,8 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="dest card shadow">
-                    <img src="./src/images/paris.jpg" class="card-img-top" alt="Paris">
+                    <img src="https://ik.imagekit.io/jlez6y282/compressed/paris2.jpg?updatedAt=1721758717012"
+                        class="card-img-top" alt="Paris">
                     <div class="card-body">
                         <h5 class="card-title">Paris, France</h5>
                         <p class="card-text">Experience the city of lights and its iconic landmarks. Experience the
@@ -74,7 +75,8 @@
 
             <div class="col-md-4 mb-4">
                 <div class="dest card shadow">
-                    <img src="./src/images/tokyo.jpg" class="card-img-top" alt="Tokyo">
+                    <img src="https://ik.imagekit.io/jlez6y282/compressed/tokyo.jpg?updatedAt=1721758798745"
+                        class="card-img-top" alt="Tokyo">
                     <div class="card-body">
                         <h5 class="card-title">Tokyo, Japan</h5>
                         <p class="card-text">Discover the blend of tradition and technology in Tokyo. Discover the
@@ -90,7 +92,8 @@
 
             <div class="col-md-4 mb-4">
                 <div class="dest card shadow">
-                    <img src="./src/images/new-york.jpg" class="card-img-top" alt="New York">
+                    <img src="https://ik.imagekit.io/jlez6y282/compressed/newyork%20(3).jpg?updatedAt=1721758556329"
+                        class="card-img-top" alt="New York">
                     <div class="card-body">
                         <h5 class="card-title">New York, USA</h5>
                         <p class="card-text">Explore the city that never sleeps with its bustling streets. Explore
