--- a/src/tour.html
+++ b/src/tour.html
@@ -22,7 +22,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav align-items-center px-2 mx-2">
+                    <ul class="navitems navbar-nav align-items-center px-2 mx-2">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                         </li>
@@ -58,12 +58,12 @@
             <div class="col-md-3 mb-4">
                 <div class="card shadow">
                     <div class="d-flex flex-wrap">
-                        <img src="./images/brooklyn-bridge (3).jpg" class="card-img-top col-6 p-1"
-                            style="max-width: 50%;" alt="Brooklyn Bridge">
-                        <img src="./images/brooklyn-bridge (2).jpg" class="card-img-top col-6 p-1"
-                            style="max-width: 50%;" alt="Brooklyn Bridge">
-                        <img src="./images/brooklyn-bridge.jpg" class="right-img card-img-top col-6 p-1"
-                            alt="Brooklyn Bridge">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/brooklyn-bridge.jpg?updatedAt=1721758630951"
+                            class="card-img-top col-6 p-1" style="max-width: 50%;" alt="Brooklyn Bridge">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/brooklyn-bridge%20(2).jpg?updatedAt=1721758709158"
+                            class="card-img-top col-6 p-1" style="max-width: 50%;" alt="Brooklyn Bridge">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/brooklyn-bridge%20(2).jpg?updatedAt=1721758709288"
+                            class="right-img card-img-top col-6 p-1" alt="Brooklyn Bridge">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Brooklyn Bridge</h5>
@@ -79,12 +79,12 @@
             <div class="col-md-3 mb-4">
                 <div class="card shadow">
                     <div class="d-flex flex-wrap">
-                        <img src="./images/centralpark.jfif" class="card-img-top col-6 p-1" style="max-width: 50%;"
-                            alt="Central Park">
-                        <img src="./images/centralpark1.jfif" class="card-img-top col-6 p-1" style="max-width: 50%;"
-                            alt="Central Park">
-                        <img src="./images/centralpark2.jfif" class="right-img card-img-top col-6 p-1"
-                            alt="Central Park">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/centralpark.jfif?updatedAt=1721767037619"
+                            class="card-img-top col-6 p-1" style="max-width: 50%;" alt="Central Park">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/centralpark1.jfif?updatedAt=1721767088945"
+                            class="card-img-top col-6 p-1" style="max-width: 50%;" alt="Central Park">
+                        <img src=".https://ik.imagekit.io/jlez6y282/compressed/centralpark2.jfif?updatedAt=1721767105394"
+                            class="right-img card-img-top col-6 p-1" alt="Central Park">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Central Park</h5>
@@ -100,12 +100,12 @@
             <div class="col-md-3 mb-4">
                 <div class="card shadow">
                     <div class="d-flex flex-wrap">
-                        <img src="./images/esb.webp" class="card-img-top col-6 p-1" style="max-width: 50%;"
-                            alt="Empire State Building">
-                        <img src="./images/empire-state-building.jpg" class="card-img-top col-6 p-1"
-                            style="max-width: 50%;" alt="Empire State Building">
-                        <img src="./images/esb1.jpg" class="right-img card-img-top col-6 p-1"
-                            alt="Empire State Building">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/esb.webp?updatedAt=1721758270917"
+                            class="card-img-top col-6 p-1" style="max-width: 50%;" alt="Empire State Building">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/esb1.jpg?updatedAt=1721758283286"
+                            class="card-img-top col-6 p-1" style="max-width: 50%;" alt="Empire State Building">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/empire-state-building.jpg?updatedAt=1721758307666"
+                            class="right-img card-img-top col-6 p-1" alt="Empire State Building">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Empire State Building</h5>
@@ -120,12 +120,12 @@
             <div class="col-md-3 mb-4">
                 <div class="card shadow">
                     <div class="d-flex flex-wrap">
-                        <img src="./images/sol1.jfif" class="card-img-top col-6 p-1" style="max-width: 50%;"
-                            alt="Statue of Liberty">
-                        <img src="./images/sol.jfif" class="card-img-top col-6 p-1" style="max-width: 50%;"
-                            alt="Statue of Liberty">
-                        <img src="./images/statueofliberty.jpg" class="right-img card-img-top col-6 p-1"
-                            alt="Statue of Liberty">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/sol1.jfif?updatedAt=1721767141649"
+                            class="card-img-top col-6 p-1" style="max-width: 50%;" alt="Statue of Liberty">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/sol.jfif?updatedAt=1721767121080"
+                            class="card-img-top col-6 p-1" style="max-width: 50%;" alt="Statue of Liberty">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/statueofliberty.jpg?updatedAt=1721758617003"
+                            class="right-img card-img-top col-6 p-1" alt="Statue of Liberty">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Statue of Liberty</h5>
@@ -148,7 +148,8 @@
                             <div class="row">
                                 <div class="col-md-6 col-lg-6 mb-4">
                                     <div class="card shadow">
-                                        <img src="./images/apartment.jpg" class="card-img-top" alt="Apartments">
+                                        <img src="https://ik.imagekit.io/jlez6y282/compressed/apartment.jpg?updatedAt=1721758761306"
+                                            class="card-img-top" alt="Apartments">
                                         <div class="card-body">
                                             <h5 class="card-title">Apartments</h5>
                                             <p class="card-text">Stay in our stylish and fully-equipped apartments,
@@ -161,7 +162,8 @@
                                 </div>
                                 <div class="col-md-6 col-lg-6 mb-4 d-none d-md-block">
                                     <div class="card shadow">
-                                        <img src="./images/villa.jpg" class="card-img-top" alt="Villas">
+                                        <img src="https://ik.imagekit.io/jlez6y282/compressed/villa.jpg?updatedAt=1721758756548"
+                                            class="card-img-top" alt="Villas">
                                         <div class="card-body">
                                             <h5 class="card-title">Villas</h5>
                                             <p class="card-text">Indulge in luxury and privacy at our stunning villas,
@@ -178,8 +180,8 @@
                             <div class="row">
                                 <div class="col-md-6 col-lg-6 mb-4">
                                     <div class="card shadow">
-                                        <img src="./images/hotel.jpg" class="card-img-top"
-                                            alt="Additional Accommodation">
+                                        <img src="https://ik.imagekit.io/jlez6y282/compressed/hotel.jpg?updatedAt=1721758325042"
+                                            class="card-img-top" alt="Additional Accommodation">
                                         <div class="card-body">
                                             <h5 class="card-title">Hotels</h5>
                                             <p class="card-text">Experience unparalleled comfort and convenience at our
@@ -192,8 +194,8 @@
                                 </div>
                                 <div class="col-md-6 col-lg-6 mb-4 d-none d-md-block">
                                     <div class="card shadow">
-                                        <img src="./images/houses.jpg" class="card-img-top"
-                                            alt="Additional Accommodation">
+                                        <img src="https://ik.imagekit.io/jlez6y282/compressed/houses.jpg?updatedAt=1721758342099"
+                                            class="card-img-top" alt="Additional Accommodation">
                                         <div class="card-body">
                                             <h5 class="card-title">Houses</h5>
                                             <p class="card-text">Book one of our charming houses for a unique and
