--- a/src/destination.html
+++ b/src/destination.html
@@ -26,7 +26,7 @@
                             aria-label="Search">
                         <button class="btn btn-outline-light" type="submit">Search</button>
                     </form>
-                    <ul class="navbar-nav order-lg-2">
+                    <ul class="navitems navbar-nav order-lg-2">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                         </li>
@@ -48,21 +48,24 @@
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="height: 80vh;">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/new-york.jpg" class="d-block w-100 object-fit-cover" alt="...">
+                    <img src="https://ik.imagekit.io/jlez6y282/compressed/newyork%20(3).jpg?updatedAt=1721758556329"
+                        class="d-block w-100 object-fit-cover" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/tokyo.jpg" class="d-block w-100 object-fit-cover" alt="...">
+                    <img src="https://ik.imagekit.io/jlez6y282/compressed/tokyo.jpg?updatedAt=1721758798745"
+                        class="d-block w-100 object-fit-cover" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/prague.jpg" class="d-block w-100 object-fit-cover" alt="...">
+                    <img src="https://ik.imagekit.io/jlez6y282/compressed/prague.jpg?updatedAt=1721758660800"
+                        class="d-block w-100 object-fit-cover" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Some representative placeholder content for the third slide.</p>
@@ -99,7 +102,8 @@
                 <div class="card h-100 shadow">
                     <div class="card-body">
                         <h5 class="card-title text-center text-zinc-700">Paris, France</h5>
-                        <img src="./images/paris.jpg" class="card-img-top mt-3" alt="Paris">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/paris2.jpg?updatedAt=1721758717012"
+                            class="card-img-top mt-3" alt="Paris">
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
@@ -114,8 +118,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Paris, France</h5>
-                        <img src="./images/paris.jpg" class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-center text-zinc-700">Venice, Italy</h5>
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/venice.jpg?updatedAt=1721758814839"
+                            class="card-img-top mt-3" alt="Paris">
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
@@ -130,8 +135,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Paris, France</h5>
-                        <img src="./images/paris.jpg" class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-center text-zinc-700">Tokyo, Japan</h5>
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/tokyo.jpg?updatedAt=1721758798745"
+                            class="card-img-top mt-3" alt="Paris">
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
@@ -146,8 +152,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Paris, France</h5>
-                        <img src="./images/paris.jpg" class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-center text-zinc-700">Prague, Czechia</h5>
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/prague.jpg?updatedAt=1721758660800"
+                            class="card-img-top mt-3" alt="Paris">
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
@@ -162,8 +169,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Paris, France</h5>
-                        <img src="./images/paris.jpg" class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-center text-zinc-700">Dubai, UAE</h5>
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/dubai.jpg?updatedAt=1721758456544"
+                            class="card-img-top mt-3" alt="Paris">
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
