--- a/src/destination.html
+++ b/src/destination.html
@@ -101,9 +101,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Paris, France</h5>
                         <img src="https://ik.imagekit.io/jlez6y282/compressed/paris2.jpg?updatedAt=1721758717012"
                             class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-left pt-1 text-zinc-700">Paris, France</h5>
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
@@ -118,9 +118,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Venice, Italy</h5>
                         <img src="https://ik.imagekit.io/jlez6y282/compressed/venice.jpg?updatedAt=1721758814839"
                             class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-left pt-1 text-zinc-700">Venice, Italy</h5>
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
@@ -135,9 +135,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Tokyo, Japan</h5>
                         <img src="https://ik.imagekit.io/jlez6y282/compressed/tokyo.jpg?updatedAt=1721758798745"
                             class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-left pt-1 text-zinc-700">Tokyo, Japan</h5>
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
@@ -152,9 +152,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Prague, Czechia</h5>
                         <img src="https://ik.imagekit.io/jlez6y282/compressed/prague.jpg?updatedAt=1721758660800"
                             class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-left pt-1 text-zinc-700">Prague, Czechia</h5>
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
@@ -169,9 +169,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Dubai, UAE</h5>
                         <img src="https://ik.imagekit.io/jlez6y282/compressed/dubai.jpg?updatedAt=1721758456544"
                             class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-left pt-1 text-zinc-700">Dubai, UAE</h5>
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
@@ -186,8 +186,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Paris, France</h5>
-                        <img src="./images/paris.jpg" class="card-img-top mt-3" alt="Paris">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/bangkok.jpg?updatedAt=1722245836823"
+                            class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-left pt-1 text-zinc-700">Bangkok, Thailand</h5>
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
@@ -202,8 +203,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Paris, France</h5>
-                        <img src="./images/paris.jpg" class="card-img-top mt-3" alt="Paris">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/london.jpg?updatedAt=1722245840205"
+                            class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-left pt-1 text-zinc-700">London, England</h5>
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
@@ -218,8 +220,9 @@
             <div class="col mb-5">
                 <div class="card h-100 shadow">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-zinc-700">Paris, France</h5>
-                        <img src="./images/paris.jpg" class="card-img-top mt-3" alt="Paris">
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/rome.jpg?updatedAt=1722245823429"
+                            class="card-img-top mt-3" alt="Paris">
+                        <h5 class="card-title text-left pt-1 text-zinc-700">Rome, Italy</h5>
                         <p class="card-text mt-3 text-stone-500">Experience the city of lights and its iconic
                             landmarks.
                         </p>
