updates on image optimization

--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
                 </div>
             </div>
         </nav>
-        <div class="row justify-content-center align-items-center flex-grow-1">
+        <div class="row justify-content-center align-items-center flex-grow-1 mt-4">
             <div class="col-md-8">
                 <h1 class="display-4 mb-4">EXPLORE THE WORLD VIRTUALLY</h1>
                 <p class="lead mb-5">Experience travel like never before with our virtual reality tours.</p>
-                <a href="./src/destination.html" class="btn btn-primary btn-lg px-5">Browse Destinations</a>
+                <a href="./src/destination.html" class="btn text-white btn-outline-dark btn-lg px-5">Browse
+                    Destinations</a>
             </div>
         </div>
     </div>
