--- a/src/tour.html
+++ b/src/tour.html
@@ -83,7 +83,7 @@
                             class="card-img-top col-6 p-1" style="max-width: 50%;" alt="Central Park">
                         <img src="https://ik.imagekit.io/jlez6y282/compressed/centralpark1.jfif?updatedAt=1721767088945"
                             class="card-img-top col-6 p-1" style="max-width: 50%;" alt="Central Park">
-                        <img src=".https://ik.imagekit.io/jlez6y282/compressed/centralpark2.jfif?updatedAt=1721767105394"
+                        <img src="https://ik.imagekit.io/jlez6y282/compressed/centralpark2.jfif?updatedAt=1721767105394"
                             class="right-img card-img-top col-6 p-1" alt="Central Park">
                     </div>
                     <div class="card-body">
