--- a/src/user.html
+++ b/src/user.html
@@ -46,7 +46,7 @@
                         <p class="small">user profile</p>
                         <p class="small">joined: 28/07/2024</p>
                     </div>
-                    <ul class="nav flex-column">
+                    <ul class="nav flex-column g-1">
                         <li class="nav-item ubs">
                             <a class="nav-link text-light" href="#personal-info">Personal Information</a>
                         </li>
@@ -73,7 +73,7 @@
             <main class="container-fluid col-md-9 ms-sm-auto col-lg-10 ps-3">
                 <div class="userhero position-relative overflow-hidden p-md-5 text-center bg-light">
                     <div class="col-md-5 p-lg-5 mx-auto my-5">
-                        <h1 class="display-4 fw-normal text-white">WELCOME TO VR TRAVEL</h1>
+                        <!-- <h1 class="display-4 text-white">WELCOME TO VR TRAVEL</h1> -->
                     </div>
                     <div class="product-device shadow-sm d-none d-md-block"></div>
                     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -202,35 +202,38 @@
                         </div>
                     </div>
                 </div>
-
-                <footer class="text-white py-4 mt-4">
+                <footer class="text-white pt-5">
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-4">
-                                <h5>VR Travel</h5>
-                                <p>Travel complete</p>
+                            <div class="col-md-4 mb-4">
+                                <h3 class="mb-4">VR Travel</h3>
+                                <p class="mb-2">Travel complete</p>
                                 <p>@2024</p>
                             </div>
-                            <div class="col-md-4">
-                                <h5>Destinations</h5>
+                            <div class="col-md-4 mb-4">
+                                <h5 class="mb-3">Destinations</h5>
                                 <ul class="list-unstyled">
-                                    <li>Tokyo</li>
-                                    <li>Paris</li>
-                                    <li>New York</li>
+                                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Tokyo</a></li>
+                                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Paris</a></li>
+                                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">New York</a>
+                                    </li>
                                 </ul>
-                                <h5>Travel Interest</h5>
+                                <h5 class="mt-4">Travel Interest</h5>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 mb-4">
+                                <h5 class="mb-3">Membership</h5>
                                 <ul class="list-unstyled">
-                                    <li class="text-white">Membership</li>
-                                    <li class="text-white">Community</li>
-                                    <li class="text-white">Contact us</li>
+                                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Community</a>
+                                    </li>
+                                    <li class="mb-2"><a href="#" class="text-white text-decoration-none">Contact us</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
-                    </div>
-                    <div class="text-center mt-3">
-                        <p>Copyright © 2024 VR Travel.</p>
+                        <hr class="my-6">
+                        <div class="text-center">
+                            <p>&copy; 2024 VR Travel. All rights reserved.</p>
+                        </div>
                     </div>
                 </footer>
             </main>
