--- a/src/user.html
+++ b/src/user.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Navbar section -->
-    <nav class="usernav navbar navbar-expand-lg">
+    <nav class="usernav navbar navbar-expand-lg max-width-content">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">VR TRAVEL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -35,9 +35,9 @@
     </nav>
 
     <!-- Sidebar section -->
-    <div class="container-fluid">
+    <div class="container-fluid max-width-content">
         <div class="row g-0">
-            <aside class="col-md-3 col-lg-2 d-md-block sidebar collapse">
+            <aside class="col-md-3 col-lg-2 d-md-block sidebar collapse side-width">
                 <div class="position-sticky pt-3">
                     <div class="text-center text-light mb-4">
                         <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/563aca3bff112c0b231ee9f066910d0e87c16c39b86fa9f9c8991703fd1a53ec?apiKey=8b634b9094e84ec0b81d05754983883d"
@@ -70,7 +70,7 @@
             </aside>
 
             <!-- Main section -->
-            <main class="container-fluid col-md-9 ms-sm-auto col-lg-10 ps-3">
+            <main class="container-fluid col-md-9 col-lg-10 max-width-content">
                 <div class="userhero position-relative overflow-hidden p-md-5 text-center bg-light">
                     <div class="col-md-5 p-lg-5 mx-auto my-5">
                         <!-- <h1 class="display-4 text-white">WELCOME TO VR TRAVEL</h1> -->
