--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- hero section -->
     <div class="jumbotron container-fluid text-center text-black position-relative d-flex flex-column">
-        <nav class="navbar navbar-expand-lg navbar-dark sticky-top position-fixed top-0 start-0">
+        <nav class="navbar navbar-expand-lg navbar-dark sticky-top position-fixed top-0  max-width-content">
             <div class="container-fluid">
                 <a class="navbar-brand fs-4" href="#">VR TRAVEL</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -52,7 +52,7 @@
         </div>
     </div>
     <!-- destination section -->
-    <div class="tour">
+    <div class="tour mt-5 max-width-content">
         <h1 class="text-center mb-4">Popular Travel Destinations</h1>
         <p class="text-center text-muted mb-5">Start your journey with one click, explore the beautiful world!</p>
 
@@ -109,8 +109,32 @@
             </div>
         </div>
     </div>
-    <!-- review section -->
+    <!-- explore section -->
     <div class="container mt-5">
+        <div class="row align-items-center">
+            <div class="col-md-7">
+                <div class="hero-content">
+                    <h1>Explore the World Like Never Before</h1>
+                    <p class="mt-4">Discover breathtaking destinations, exclusive deals, and unforgettable experiences
+                        with our
+                        curated travel packages.</p>
+                    <div class="hero-buttons mt-5">
+                        <a href="#destinations" class="btn btn-outline-dark btn-lg me-2">Find Your Adventure</a>
+                    </div>
+                </div>
+            </div>
+            <div class="explore col-md-5 mt-md-0 mt-4">
+                <img loading="lazy" srcset="
+                https://cdn.builder.io/api/v1/image/assets/TEMP/460ba3aaac65630efa360323a2eb44ffebc1a4a7ce4afbd549e450b49d809deb?apiKey=1a80c3bbe0734274afb691f5c74124ec&width=100 100w,
+                https://cdn.builder.io/api/v1/image/assets/TEMP/460ba3aaac65630efa360323a2eb44ffebc1a4a7ce4afbd549e450b49d809deb?apiKey=1a80c3bbe0734274afb691f5c74124ec&width=200 200w,
+                https://cdn.builder.io/api/v1/image/assets/TEMP/460ba3aaac65630efa360323a2eb44ffebc1a4a7ce4afbd549e450b49d809deb?apiKey=1a80c3bbe0734274afb691f5c74124ec&width=400 400w,
+                https://cdn.builder.io/api/v1/image/assets/TEMP/460ba3aaac65630efa360323a2eb44ffebc1a4a7ce4afbd549e450b49d809deb?apiKey=1a80c3bbe0734274afb691f5c74124ec&width=800 800w,
+              " class="img-fluid w-100 aspect-ratio" />
+            </div>
+        </div>
+    </div>
+    <!-- review section -->
+    <div class="container my-5">
         <h2 class="mb-4">Latest reviews</h2>
         <div class="row">
             <div class="col-md-4 mb-4">
