--- a/src/destination.html
+++ b/src/destination.html
@@ -13,7 +13,8 @@
 <body>
     <!-- navbar -->
     <div class="cont text-center text-black pb-6 position-relative d-flex flex-column">
-        <nav class="navbar navbar-expand-lg navbar-dark sticky-top position-fixed top-0 start-0 w-100">
+        <nav
+            class="navbar navbar-expand-lg navbar-dark sticky-top position-fixed top-0 start-0 w-100 max-width-content">
             <div class="container-fluid">
                 <a class="navbar-brand fs-4" href="#">VR TRAVEL</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -45,7 +46,7 @@
         </nav>
 
         <!-- Carousel Hero Section -->
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="height: 80vh;">
+        <div id="carouselExampleCaptions" class="carousel slide w-100" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="https://ik.imagekit.io/jlez6y282/compressed/newyork%20(3).jpg?updatedAt=1721758556329"
@@ -94,7 +95,7 @@
     </div>
 
     <!-- dest section -->
-    <div class="container-fluid px-4 px-md-5 pb-5 mt-4">
+    <div class="container-fluid px-4 px-md-5 pb-5 mt-4 max-width-content">
         <h2 class="text-center text-black-80 mb-5">EXPLORE DESTINATIONS</h2>
         <div class="destination row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-4">
             <!-- Repeat this card 10 times -->
